Authentication module completed